# Ship-Sandbox

./: CMakeLists.txt  README.md  ShipSandbox TODO.txt  changes.txt
Authoring/: RC Bomb Texture.psd  RMS Titanic Structure.psd  Smash Cursor.psd  Timer Bomb Texture.psd
Data/: materials.json
Data/Sounds/: bombattached_3.flac  draw.flac  explosion_1.flac  explosion_2.flac  explosion_3.flac  explosion_4.flac  explosion_5.flac  pinpoint_1.flac  pinpoint_2.flac  rcbombping_1.flac  swirl.flac
GameLib/: AABB.cpp  AABB.h  Bomb.h  Bombs.cpp  Bombs.h  Buffer.h  CMakeLists.txt  Cable.cpp  Cable.h  CircularList.h  ElectricalElement.cpp  ElectricalElement.h  ElectricalElements.cpp  ElectricalElements.h  ElementContainer.h  ElementRepository.h  FixedSizeVector.h  Game.cpp  Game.h  GameController.cpp  GameController.h  GameEventDispatcher.h  GameParameters.cpp  GameParameters.h  GameRandomEngine.h  GameTypes.h  Generator.cpp  Generator.h  IGameEventHandler.h  Lamp.cpp  Lamp.h  Log.h  Material.cpp  Material.h  Physics.h  Point.cpp  Point.h  Points.cpp  Points.h  RCBomb.cpp  (+30 more)
ShipSandbox/: AboutDialog.cpp  CMakeLists.txt  EventTickerPanel.cpp  EventTickerPanel.h  LinearSliderControl.cpp  LinearSliderControl.h  LoggingDialog.cpp  MainFrame.cpp  MainFrame.h  SettingsDialog.cpp  SettingsDialog.h  SliderControl.cpp  SliderControl.h  SoundController.cpp  SoundController.h  ToolController.cpp  Tools.cpp  Tools.h  Version.h
UnitTests/: CMakeLists.txt  CircularListTests.cpp  FixedSizeVectorTests.cpp
